Fix print from wrapping when no typekit

--- a/app/stylesheets/design/_buttons.scss
+++ b/app/stylesheets/design/_buttons.scss
@@ -7,12 +7,15 @@ BUTTONS / ICONS
   @include border-radius(5px);
   color: #6e6e6e;
   @include inline-block;
-  font-size: 1em;
+  font-size: .9em;
   font-weight: bold;
   padding: 10px;
   text-decoration: none;
   text-transform: uppercase;
   }
+.wf-active .button {
+  font-size: 1em;
+  }  
 .button.notext { text-indent: -9999px; }
 .button.list { margin: 0 5px 0 0; }
 .button.list:last-child,
